--- a/guia3/parte2/index.html
+++ b/guia3/parte2/index.html
@@ -10,7 +10,9 @@
     <template id="card-template">
         <div class="app-card">
             <h2 class="title"></h2>
+            <img src="">
             <p class="desc"></p>
+            <span class="price"></span>
         </div>
     </template>
 
